# ChangeLog for www-servers/gorg
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/gorg/ChangeLog,v 1.22 2009/10/17 15:39:49 a3li Exp $

*gorg-0.6.4 (17 Oct 2009)

  17 Oct 2009; Alex Legler <a3li@gentoo.org> +gorg-0.6.4.ebuild:
  Version bump, fixes caching, bug 289391

*gorg-0.6.3-r3 (24 Aug 2009)

  24 Aug 2009; Lance Albertson <ramereth@gentoo.org> +gorg-0.6.3-r3.ebuild:
  Add www-server/mod_fcgid dep if both apache2 & fastcgi use flags are
  enabled.
  Fixes bug #251177

  13 Jun 2009; Hans de Graaff <graaff@gentoo.org> -gorg-0.5.ebuild,
  -gorg-0.6.3.ebuild, -gorg-0.6.3-r1.ebuild:
  Remove old versions.

  06 Jun 2009; nixnut <nixnut@gentoo.org> gorg-0.6.3-r2.ebuild:
  ppc stable #271954

  03 Jun 2009; Markus Meier <maekke@gentoo.org> gorg-0.6.3-r2.ebuild:
  amd64/x86 stable, bug #271954

*gorg-0.6.3-r2 (30 Dec 2008)

  30 Dec 2008; Hans de Graaff <graaff@gentoo.org> +gorg-0.6.3-r2.ebuild:
  Add apache2 and fastcgi USE flags as requested in #251177 and how we handle
  this for other similar packages. Move to EAPI=2 so that we can handle the
  mysql USE flag dependency on ruby-dbi better. Don't depend directly on
  underlying dependencies of ruby-dbi and ruby-fcgi. Fix variable quoting.

  05 Sep 2007; Joshua Nichols <nichoj@gentoo.org> gorg-0.5.ebuild,
  gorg-0.6.3.ebuild, gorg-0.6.3-r1.ebuild:
  Removed apache and fastcgi messages. Displays a message during postinstall
  now. See bug #186107.

  29 Jul 2007; Christian Heim <phreak@gentoo.org> gorg-0.5.ebuild,
  gorg-0.6.3.ebuild, gorg-0.6.3-r1.ebuild:
  Fixing the DEPEND/RDEPEND for the move of net-www/apache to
  www-servers/apache (#78622).

  23 Apr 2007; <rb@gentoo.org> gorg-0.6.3-r1.ebuild:
  EAPI shouldn't have been set

*gorg-0.6.3-r1 (23 Apr 2007)

  23 Apr 2007; Richard Brown <rbrown@gentoo.org> metadata.xml,
  -gorg-0.6.ebuild, -gorg-0.6.1.ebuild, +gorg-0.6.3-r1.ebuild:
  Fix bug #133713, #173748, #175204. Remove old versions
